<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.botsko</groupId>
    <artifactId>prism-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.1.8-SNAPSHOT</version>
    <modules>
        <module>Prism-Api</module>
        <module>Prism</module>
    </modules>
    <name>Prism-Parent</name>
    <url>https://Prism-Bukkit.readthedocs.io/</url>
    <scm>
        <connection>scm:git:git@github.com:AddstarMC/Prism-Bukkit.git</connection>
        <developerConnection>scm:git:git@github.com:AddstarMC/Prism-Bukkit.git</developerConnection>
        <url>https://github.com/AddstarMC/Prism-Bukkit</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <snapshotRepository>
            <id>maven.addstar.com.au-snapshots</id>
            <name>addstar-maven-snapshots</name>
            <url>https://maven.addstar.com.au/artifactory/ext-snapshots-local</url>
        </snapshotRepository>
        <repository>
            <id>maven.addstar.com.au</id>
            <name>addstar-maven-releases</name>
            <url>https://maven.addstar.com.au/artifactory/ext-release-local</url>
        </repository>
    </distributionManagement>
    <developers>
        <developer>
            <id>viv</id>
            <name>Viveleroi0</name>
            <roles>
                <role>Emeritus Project Owner</role>
            </roles>
        </developer>
        <developer>
            <id>Add5tar</id>
            <email>admin@addstarmc.com.au</email>
            <roles>
                <role>Project Lead</role>
            </roles>
        </developer>
        <developer>
            <id>Narimm</id>
            <email>benjicharlton@gmail.com</email>
            <roles>
                <role>Maintenance</role>
            </roles>
        </developer>
    </developers>
    <properties>
        <plugin.version>${project.version}-${build.number}</plugin.version>
        <build.number/>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spigot.api.version>1.16</spigot.api.version>
        <bukkit.version>1.16.5-R0.1-SNAPSHOT</bukkit.version>
        <junit.version>5.5.0</junit.version>
        <derby.version>10.14.2.0</derby.version>
        <mockbukkit.version>0.31.1</mockbukkit.version>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <mockbukkit.version>1.5.0</mockbukkit.version>
    </properties>
    <dependencies>
        <dependency>
            <!-- we dont use runtime features-->
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>19.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.seeseemelk</groupId>
            <artifactId>MockBukkit-v1.16</artifactId>
            <version>${mockbukkit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${bukkit.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>maven.addstar.com.au-snapshots</id>
            <name>addstar-maven-snapshots</name>
            <url>https://maven.addstar.com.au/artifactory/all-snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven.addstar.com.au</id>
            <name>addstar-maven-releases</name>
            <url>https://maven.addstar.com.au/artifactory/all-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.sk89q.com/repo/</url>
        </repository>
        <repository>
            <id>paper-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository> <!-- for development builds -->
            <id>sonatype-oss</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0-M1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.0-M1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>16</source>
                        <target>16</target>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.9</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>${junit.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
